--- a/package.json
+++ b/package.json
@@ -1,19 +1,8 @@
 {
   "name": "mars-site",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Coatjj/mars-site.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Coatjj/mars-site/issues"
-  },
-  "homepage": "https://github.com/Coatjj/mars-site#readme"
+  "dependencies": {
+    "jquery": "^3.2.1",
+    "normalize.css": "^7.0.0"
+  }
 }
